@@ -1,5 +1,9 @@
 2015-01-20  Carl Hetherington  <cth@carlh.net>
 
+	* Fix update checker.
+
+2015-01-20  Carl Hetherington  <cth@carlh.net>
+
 	* Version 1.77.0 released.
 
 2015-01-16  c.hetherington  <cth@carlh.net>
